Transpiler: Add compilation step when output format is defined to be jar